Revert "MODSOURCE-803: DuplicateException is thrown when saving batch of Bib records for linked Authority (#658)"
This reverts commit f79b38b74a0948b09c1a0ac9e1496df8a9e2fb40.